# BitArray

./: CMakeLists.txt
bitarray/: bitarray.cpp  bitarray.hpp
test/: test.cpp
